==> Runhui-Wang/Efm32GG11_TTV/ttv_cli_kernel_micriumos/user_spi_interface.c <==
#include "os.h"
#include "user_spi_interface.h"
#include "cli.h"
#include <stdio.h>
#include <string.h>
#include "spidrv.h"
#include "sl_spidrv_instances.h"
#include "sl_uartdrv_instances.h"
#define SPI_HANDLE                  sl_spidrv_exp_handle
#define UART_HANDLE                 sl_uartdrv_usart_exp_handle

void Set_SSN(uint8_t level)
{
  if(level == LOW) {
    GPIO_PinOutClear(gpioPortE,13);
  }
  if(level == HIGH) {
    GPIO_PinOutSet(gpioPortE,13);
  }
}

void Set_SCK_LOW(void)
{
  /*to set low SPI_SCK*/
  GPIO_PinOutClear(gpioPortE,12);
}

void Waiting_For_INTN(uint32_t timeout)
{
  uint32_t tickstart;
  
  /*Init tickstart for timeout management */
  tickstart = sl_sleeptimer_get_tick_count64();

  /*step a - Waiting for the interrupt INTN (low active) */
  while(GPIO_PinInGet(gpioPortA, 12))
  {
    /* Timeout management */
    if ((((sl_sleeptimer_get_tick_count64() - tickstart) >=  timeout) && (timeout != 0xFFFFFFFFU)) || (timeout == 0U))
    {
      printf("TIMEOUT after %u ms\n", (unsigned int)timeout);
    }
  }
}

void Write_Opcode(uint8_t one_byte)
{
  /* Timeout duration in millisecond [ms] */
  uint8_t timeout = 10;
  
  /* 1. Put SSN low - Activate */
  //Set_SSN(LOW);
  
  /* 2. Transmit register address */
  SPIDRV_MTransmitB  (SPI_HANDLE,
  &one_byte,
  1
  );
  delay(10);
  
  /* 3. Put SSN high - Deactivate */
 // Set_SSN(HIGH);
}

uint32_t Read_Dword(uint8_t rd_opcode, uint8_t address)
{
  /* Timeout duration in millisecond [ms] */
  uint8_t timeout = 10;
  uint8_t spiTX[2];
  uint8_t spiRX[4];
  uint32_t temp_u32 = 0;
  
  spiTX[0] = rd_opcode;
  spiTX[1] = address;
  
  /* 1. Put SSN low - Activate */
  Set_SSN(LOW);
  
  /* 2. Transmit register address */
  SPIDRV_MTransmitB  (SPI_HANDLE,
      spiTX,
      2
      );
  delay(10);
  /*3. Read four bytes */
  SPIDRV_MReceiveB  (SPI_HANDLE,
      spiRX,
      4
      );
  delay(10);
  /* 4. Put SSN high - Deactivate */
  Set_SSN(HIGH);
  
  /*Concatenate of bytes (from MSB to LSB) */
  temp_u32 = (spiRX[0]<<24) + (spiRX[1]<<16) + (spiRX[2]<<8) + (spiRX[3]);
  
  return temp_u32;
}
